apps/naas-api/the-intersect/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: naas-api
  namespace: naas-api
  labels:
    app: naas-api
spec:
  type: ClusterIP
  selector:
    app: naas-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 8081
      targetPort: metrics
      protocol: TCP
